syntax = "proto3";
package file_service;
option go_package = "github.com/zhengliu92/minio-file-server/file_service";


message BucketExistsRequest {
  string bucket_name = 1;
}

message BucketExistsResponse {
  bool exists = 1;
  string message = 2;
}

message NewFolderInBucketRequest {
  string bucket_name = 1;
  string folder_name = 2;
}

message NewFolderInBucketResponse {
  string message = 1;
}


message Base64UploadFilesRequest {
  string bucket_name = 1; // Name of the bucket where files will be uploaded
  repeated File files = 2; // List of files to be uploaded
}

message Base64UploadFilesResponse {
  string message = 1;     // Additional details
}


message File {
  string name = 1;        // File name
  bytes content = 2;      // File content
}

message ObjectInfo {
  string name = 1;        // File name
  optional int64 size = 2;
  string last_modified = 3;
}

message CreateBucketRequest {
  string bucket_name = 1; // Name of the bucket to be created
}

message CreateBucketResponse {
  string message = 1;     // Additional details
}

message SaveStringToFileRequest{
  string bucket_name = 1;
  string file_name = 2;
  string content = 3;
}

message SaveStringToFileResponse{
  string message = 1;
}


message ListBucketFilesRequest {
  string bucket_name = 1; // Name of the bucket to list files from
  optional string folder_name = 2; // Name of the folder to list files from
  repeated string omit_regexes = 3; // Name of the folder to list files from
}

message ListBucketFilesResponse {
  string message = 1;
  repeated ObjectInfo files = 2; 
  optional string folder_name = 3;
}


message DeleteBucketRequest {
  string bucket_name = 1; // Name of the bucket to be deleted
}

message DeleteBucketResponse {
  string message = 1;     // Additional details
}


message GetFileBytesRequest {
  string bucket_name = 1; 
  string file_name = 2; 
}

message GetFileBytesResponse {
  string file_name = 1;
  string content_type = 2;
  bytes content = 3; 
}

message DeleteFilesRequest {
  string bucket_name = 1; 
  repeated string file_names = 2; 
}

message DeleteFilesResponse {
  string message = 1;    
}

message GetFilesUrlRequest {
  string bucket_name = 1; 
  repeated string file_names = 2; 
}

message GetFilesUrlResponse {
  string message = 1;    
  repeated string urls = 2; 
}

message UploadChunkRequest {
  string bucket_name = 1; 
  string file_name = 2; // 文件名
  int64 chunk_index = 3; // 当前分片索引
  bytes chunk_data = 4; // 分片数据
}

message UploadChunkResponse {
  string message = 1; // 状态消息
  bool success = 2; // 是否成功
  string chunk_name=3;
}

message CompleteUploadRequest {
  string bucket_name = 1; 
  string file_name = 2; // 文件名
  int64 total_chunks = 3; // 分片总数
}

message CompleteUploadResponse {
  string message = 1; // 状态消息
  bool success = 2; // 是否成功
}


message GetFileTextRequest {
  string bucket_name = 1; 
  string file_name = 2; 
}

message GetFileTextResponse {
  string message = 1;
  string content = 2;
}

message IsObjectExistsRequest {
  string bucket_name = 1; 
  string object_name = 2; 
}

message IsObjectExistsResponse {
  bool exists = 1;
}